--- a/index.html
+++ b/index.html
@@ -193,22 +193,22 @@
       <h2 class="h2">Our Services</h2>
       <section>
         <div class="ser">
-          <img src="/images/mobile-development_18725997.png" alt="App Development" height="90" width="90">
+          <img src="./graphic-design_2986648.png" alt="App Development" height="90" width="90">
           <h2>APP DEVELOPMENT</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae sed minus labore maiores est explicabo.</p>
         </div>
         <div class="ser1">
-          <img src="/images/graphic-design_2986648.png" alt="Mobile App Design" height="90" width="90">
+          <img src="./mobile-development_18725997.png" alt="Mobile App Design" height="90" width="90">
           <h2>MOBILE APP DESIGN</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio aliquam ipsam autem repudiandae neque illum.</p>
         </div>
         <div class="ser2">
-          <img src="/images/coding_2704022.png" alt="Web Development" height="90" width="90">
+          <img src="./coding_2704022.png" alt="Web Development" height="90" width="90">
           <h2>WEB DEVELOPMENT</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit incidunt, cum sed quasi doloremque.</p>
         </div>
         <div class="ser3">
-          <img src="/images/mobile-development_18725997.png" alt="Development" height="90" width="90">
+          <img src="./graphic-design_2986648.png" alt="Development" height="90" width="90">
           <h2>DEVELOPMENT</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quisquam blanditiis asperiores iure.</p>
         </div>
